# profit_prophet

./: .gitignore  Cargo.toml  README.md  config.yaml
.github/actions/rust_ci/: action.yaml
.github/actions/rust_release/: action.yaml
.github/actions/setup_sops/: action.yaml
.github/actions/setup_terragrunt/: action.yaml
.github/actions/versionning/: action.yaml
.github/workflows/: infrastructure-cicd.yaml  rust-cd.yaml  rust-ci.yaml  rust-ci.yml  rust.yml  terraform-cicd.yml
connector/: Cargo.toml
connector/src/: connector.rs  data_protocol.rs  field_protocol.rs  http.rs  influxdb.rs  lib.rs
connector/src/influxdb/: client.rs  error.rs  mod.rs  protocol.rs
connector/src/postgresql/: client.rs  error.rs  mod.rs  protocol.rs
connector/src/protocol/: message.rs  mod.rs
connector/src/tcp/: client.rs  mod.rs  server.rs
connector/tests/: http.rs  influxdb.rs  postgresql.rs
data_sink/: Cargo.toml
data_sink/src/: data_sink.rs  influxdb.rs  lib.rs  main.rs
data_sink/tests/: influxdb.rs
data_source/: Cargo.toml
data_source/src/: data_source.rs  http.rs  lib.rs  sender.rs
data_source/src/load_balancing/: least_connections.rs  mod.rs  round_robin.rs  strategies.rs
data_source/tests/: data_source.rs  http.rs
infrastructure/ansible/: ansible.cfg  configure_docker_host.yml
infrastructure/ansible/inventory/group_vars/: all.yml
infrastructure/ansible/roles/docker_host/tasks/: install_docker.yml  main.yml
infrastructure/ansible/roles/user_management/tasks/: create_groups.yml  create_users.yml  main.yml
infrastructure/terraform/docker_servers/: common.hcl  terragrunt.hcl
infrastructure/terraform/docker_servers/account_1/: config.yaml
infrastructure/terraform/docker_services/: common.hcl  terragrunt.hcl
infrastructure/terraform/docker_services/influxdb/: config.yaml  influxdb_databases.tf  influxdb_users.tf  influxdb_variables.tf  terragrunt.hcl
infrastructure/terraform/modules/docker_server/: locals.tf  main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/docker_server/oracle_alwaysfree/: availability_domains.tf  compartment.tf  compute.tf  network.tf  outputs.tf  provider.tf  variables.tf
infrastructure/terraform/modules/docker_service/: main.tf  variables.tf
infrastructure/terraform/terragrunt_templates/: docker_ssh_provider.tpl  influxdb_provider.tpl  oci_provider.tpl  random_password.tpl  s3_backend.tpl
metaflow/: Cargo.toml
metaflow/src/: lib.rs
metaflow/src/config/: connector.rs  data_sink.rs  data_source.rs  mod.rs  transformation.rs
pump_fun/: Cargo.toml
pump_fun/src/: account.rs  lib.rs  main.rs  old_main.rs  working.rs
pump_fun/src/indicators/: bollinger_bands.rs  mod.rs
pump_fun/src/trading/: mod.rs  pump_fun.rs
src/: lib.rs  main.rs
src/connector/: http.rs
technical_analysis/: Cargo.toml
technical_analysis/benches/: bench.rs
technical_analysis/src/: circular_buffer.rs  lib.rs  value_type.rs
technical_analysis/src/indicator_value/: no_precision.rs  precision.rs
technical_analysis/src/indicators/: aroon.rs  atr.rs  before:.yaml  bollinger_bands.rs  cci.rs  cmf.rs  cmo.rs  donchian_channels.rs  ema.rs  fibonacci.rs  ichimoku.rs  keltner_channels.rs  macd.rs  mean_abs_std.rs  mean_abs_stdev.rs  median_abs_std.rs  median_abs_stdev.rs  mod.rs  obv.rs  parabolic_sar.rs  ppo.rs  roc.rs  rsi.rs  sma.rs  stdev.rs  stochastic_oscillator.rs  vwap.rs  woodies_cci.rs
technical_analysis/src/indicators/indicator_value/: mod.rs  no_precision.rs  precision.rs
technical_analysis/tests/: bollinger_bands.rs  roc.rs  rsi.rs  sma.rs  stdev.rs
terraform/: backend.tf  docker_hosts.tf  variables.tf
terraform/oracle_alwaysfree/: compartment.tf  compute.tf  network.tf  variables.tf
tests/connector/: http.rs
