[workspace]
members = [
    "connector",
    "data_source",
    "data_sink",
    "metaflow"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[workspace.dev-dependencies]
mockito = "0.31"
