[package]
name = "connector"
version = "0.0.0"
edition = "2021"

[lib]
name = "connector"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.81"
thiserror = "1.0"

tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.15"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
bincode = "1.3"
bytes = "1"
zstd = "0.10"

reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }

tokio-postgres = "0.7"

[dev-dependencies]
mockito = "0.31"
