[package]
name = "data_sink"
version = "0.0.0"
edition = "2021"

[lib]
name = "data_sink"
path = "src/lib.rs"

[dependencies]
connector = { path = "../connector" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio-util = "0.6"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
mockall = "0.11"
mockito = "0.31"
tokio-test = "0.4"
async-trait = "0.1"
