[package]
name = "data_sink"
version = "0.0.0"
edition = "2021"

[lib]
name = "data_sink"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"

connector = { path = "../connector" }
