[package]
name = "data_source"
version = "0.0.0"
edition = "2021"

[lib]
name = "data_source"
path = "src/lib.rs"

[dependencies]
connector = { path = "../connector" }
tokio = { version = "1.38.1", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

serde_json = "1.0"
thiserror = "1.0"
log = "0.4.22"

[dev-dependencies]
mockito = "0.31"
