[package]
name = "metaflow"
version = "0.0.0"
edition = "2021"

[lib]
name = "metaflow"
path = "src/lib.rs"

[[bin]]
name = "metaflow"
path = "src/bin/metaflow.rs"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = "1.11"
regex = "1.10"
lazy_static = "1.4.0"

log = "0.4"
env_logger = "0.11"

connector = { path = "../connector" }
data_sink = { path = "../data_sink" }
data_source = { path = "../data_source" }
